Change visual of site

--- a/Forum/src/main/resources/templates/topic.html
+++ b/Forum/src/main/resources/templates/topic.html
@@ -5,28 +5,30 @@
     <meta charset="UTF-8">
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Topic</title>
+    <!-- link css -->
+    <link rel="stylesheet" th:href="@{/style.css}"/>
 </head>
 
-<body class="bg-gray-100">
+<body class="bg-pic-color-100">
 
 <nav class="bg-white shadow">
     <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
-        <a href="/topics" class="text-indigo-600 font-medium">&larr; Back to topics</a>
+        <a href="/topics" class="text-black font-medium">&larr; Back to topics</a>
     </div>
 </nav>
 
 <div class="max-w-3xl mx-auto px-4 py-10">
 
     <!-- Topic -->
-    <h1 class="text-3xl font-bold text-indigo-600" th:text="${topic.title}"></h1>
-    <p class="text-gray-600 mt-2 mb-8" th:text="${topic.description}"></p>
+    <h1 class="text-3xl font-bold text-white" th:text="${topic.title}"></h1>
+    <p class="text-white mt-2 mb-8" th:text="${topic.description}"></p>
 
     <!-- Posts -->
     <div class="space-y-4 mb-10">
 
         <div th:each="p : ${posts}" class="bg-white shadow rounded-lg p-4">
-            <p class="text-sm text-gray-500 mb-1" th:text="${p.author}"></p>
-            <p class="text-gray-800" th:text="${p.text}"></p>
+            <div class="text-gray-800 whitespace-pre-wrap" th:text="${p.text}"></div>
+            <div class="text-sm text-gray-500 text-right mt-4" th:text="'<From: ' + ${p.author} + '>'"></div>
         </div>
 
     </div>
@@ -35,20 +37,20 @@
     <form method="post" class="bg-white rounded-lg shadow p-6 space-y-4">
 
         <div>
-            <label class="block text-gray-700 mb-1">Author</label>
+            <label class="block text-gray-800 mb-1">Author</label>
             <input name="author"
                    class="w-full border rounded-lg px-3 py-2 focus:outline-none focus:ring-2 focus:ring-indigo-500" />
         </div>
 
         <div>
-            <label class="block text-gray-700 mb-1">Message</label>
+            <label class="block text-gray-800 mb-1">Message</label>
             <textarea name="text"
                       class="w-full border rounded-lg px-3 py-2 h-28 focus:outline-none focus:ring-2 focus:ring-indigo-500">
                 </textarea>
         </div>
 
         <button type="submit"
-                class="px-6 py-2 bg-indigo-600 hover:bg-indigo-700 text-white rounded-lg transition">
+                class="px-6 py-2 bg-black hover:bg-gray-900 text-white rounded-lg transition">
             Send
         </button>
 
