--- a/Forum/src/main/resources/templates/index.html
+++ b/Forum/src/main/resources/templates/index.html
@@ -3,27 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>Forum</title>
+    <title>Lily Chou-Chou Fan Forum</title>
+    <!-- link css -->
+    <link rel="stylesheet" th:href="@{/style.css}"/>
 </head>
 
-<body class="bg-gray-100 text-gray-800">
-
-<div class="flex items-center justify-center min-height-screen py-24 px-4">
+<body class="bg-pic relative text-white">
+<div class="relative flex items-center justify-center min-h-screen py-24 px-4 z-10">
     <div class="max-w-2xl text-center">
-        <h1 class="text-5xl font-bold mb-6 text-indigo-600">
-            Welcome to the Forum
-        </h1>
-
-        <p class="text-lg text-gray-600 mb-10">
-            A simple modern discussion platform built with Spring Boot & Thymeleaf.
+        <h1 class="text-5xl font-bold mb-6 text-white">Lilyphilia</h1>
+        <p class="text-lg mb-10 text-white">
+            This is a free zone in the Ether for those who love Lily "Lilyphilia"
         </p>
 
         <a href="/topics"
-           class="px-8 py-3 bg-indigo-600 hover:bg-indigo-700 text-white text-lg rounded-lg transition">
+           class="px-8 py-3 bg-black hover:bg-gray-900 text-white text-lg rounded-lg transition">
             Browse Topics
         </a>
     </div>
 </div>
-
 </body>
+
+
 </html>
