In process of adding User functionality

--- a/Forum/src/main/resources/templates/index.html
+++ b/Forum/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
     <div class="max-w-2xl text-center">
         <h1 class="text-5xl font-bold mb-6 text-white">Lilyphilia</h1>
         <p class="text-lg mb-10 text-white">
-            This is a free zone in the Ether for those who love Lily "Lilyphilia"
+            This is a free zone in the Ether for those who love Lily
         </p>
 
         <a href="/topics"
