--- a/Forum/src/main/resources/templates/topics.html
+++ b/Forum/src/main/resources/templates/topics.html
@@ -29,7 +29,7 @@
            class="flex items-center gap-2 px-4 py-2 bg-black hover:bg-gray-900
                   text-white font-medium rounded-lg shadow transition">
 
-            <!-- Plus Icon -->
+            <!-- Plus Icon
             <svg xmlns="http://www.w3.org/2000/svg"
                  fill="none"
                  viewBox="0 0 24 24"
@@ -38,6 +38,9 @@
                  class="w-5 h-5">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M12 4v16m8-8H4"/>
             </svg>
+            -->
+
+            <img src="../static/svg-icons/plus.svg" alt="plus-icon"/>
             Add new
         </a>
     </div>
