Add badge system depending on user status, favicon. Edit layout in topic page moved form to the top

--- a/Forum/src/main/resources/templates/index.html
+++ b/Forum/src/main/resources/templates/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>Lily Chou-Chou Fan Forum</title>
+    <title>Lilyphilia: Lily Chou-Chou Fan Forum</title>
     <!-- link css -->
     <link rel="stylesheet" th:href="@{/style.css}"/>
+
+    <!-- link favicon -->
+    <link rel="icon" type="image/png" th:href="@{/favicon.png}"/>
+
 </head>
 
 <body class="bg-pic relative text-white">
