--- a/Forum/src/main/resources/templates/topics.html
+++ b/Forum/src/main/resources/templates/topics.html
@@ -96,7 +96,7 @@
 
         <!-- Page indicator -->
         <span class="text-white font-semibold text-lg">
-        <span th:text="${page}"></span>/<span th:text="${totalPages}"></span>
+        <span th:text="${page+1}"></span>/<span th:text="${totalPages}"></span>
     </span>
 
         <!-- Next -->
